<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_mapping_bringup</name>
  <version>0.1.0</version>
  <description>Integrated launch package for LiDAR mapping system combining Livox driver, FAST-LIO, and OctoMap</description>
  <maintainer email="taehun@kookmin.ac.kr">taehun-kmu</maintainer>
  <license>GPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies for included packages -->
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>octomap_server</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
